--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/ExtrasList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/ExtrasList.cshtml
@@ -15,6 +15,8 @@
 
 @await Html.PartialAsync("Hotels/_HiddenHotelInputs", @Model as HotelListVm)
 
+<input type="hidden" id="edit-type" value="extras-list"/>
+
 <div class="text-center">
 	<h1 class="display-6">@title</h1>
 	<p>Hotel Extras. Click for more information: <info-icon name="info-extras" /> </p>
@@ -37,6 +39,7 @@
 {
 	ReturnUrl = "/Admin/Hotels",
 	ReturnText = ConstReturnText.ReturnToDash,
+	ShowImportButton = true
 })
 
 @await Html.PartialAsync("Admin/_AdminErrorBlock", @Model.ErrorMessage)
