--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/_PublishArchiveLoadLock.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/_PublishArchiveLoadLock.cshtml
@@ -4,6 +4,7 @@
 	var loadMethod = Model.OnclickLoad;
 	var lockMethod = Model.OnclickLock;
 	var archiveMethod = Model.OnclickArchive;
+	var importMethod = Model.OnclickImport;
 }	
 
 <div class="row mt-3 sticky-bottom">
@@ -11,16 +12,22 @@
 
 		@await Html.PartialAsync("_SaveReturnButtonsPart", Model)
 
-		<div class="input-group mt-2 ml-2" style="width:auto;margin-right:3px;">
-			<button class="btn btn-outline-primary" class="ml-3" onclick="@publishMethod">Publish</button>
-			<button class="btn btn-outline-primary" class="mr-3" onclick="@archiveMethod">Archive</button>
+		<div class="input-group mt-2 ms-1" style="width:auto;margin-right:3px;">
+			<button class="btn btn-outline-primary" onclick="@publishMethod">Publish</button>
+			<button class="btn btn-outline-primary" onclick="@archiveMethod">Archive</button>
 
 		</div>
-		<div class="input-group mt-2 ml-2" style="width:auto;">
-			<button class="btn btn-outline-primary" class="mr-3" onclick="@loadMethod">Load</button>
-			<button class="btn btn-outline-primary" class="mr-3" onclick="@lockMethod">Lock</button>
+		<div class="input-group mt-2 ms-1" style="width:auto;">
+			<button class="btn btn-outline-primary" onclick="@loadMethod">Load</button>
+			<button class="btn btn-outline-primary" onclick="@lockMethod">Lock</button>
 		</div>
-		<div class="input-group mt-2 ml-5" style="width:auto;margin-left:5px;">
+		@if (Model.ShowImportButton)
+		{
+			<div class="input-group mt-2 ms-1" style="width:auto;">
+				<button class="btn btn-outline-primary" onclick="@importMethod">Import</button>
+			</div>
+		}
+		<div class="input-group mt-2 ms-1" style="width:auto;">
 			<div class="btn btn-outline-primary">
 				<info-icon name="info-publish" />
 			</div>
