--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/_SaveReturnButtons.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/_SaveReturnButtons.cshtml
@@ -1,14 +1,21 @@
 ﻿@model Msh.WebApp.Areas.Admin.Models.SaveReturnButtonsVm
 @{
-	var saveOperation = Model.SaveOperation;
+	var importMethod = Model.OnclickImport;
 }	
 		
 <div class="row mt-3 sticky-bottom">
 	<div class="col-12 d-inline-flex justify-content-start flex-wrap" style="width:100%;">
 		
 		@await Html.PartialAsync("_SaveReturnButtonsPart", Model)
+		
+		@if (Model.ShowImportButton)
+		{
+			<div class="input-group mt-2 ms-1" style="width:auto;">
+				<button class="btn btn-outline-primary" class="mr-3" onclick="@importMethod">Lock</button>
+			</div>
+		}
 
-		<div class="input-group mt-2 ml-5" style="width:auto;margin-left:5px;">
+		<div class="input-group mt-2 ms-1" style="width:auto;margin-left:5px;">
 			<div class="btn btn-outline-primary">
 				<info-icon name="info-save-return" />
 			</div>
