Add RoomTypeGroups flag to hotels

--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_HotelEditInfo.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_HotelEditInfo.cshtml
@@ -94,10 +94,10 @@
 		<span>No Dogs</span>
 		<div>
 			<p>
-				Set this true to disallow dogs in the whole of the hotel.
+				Set this true to disallow dogs or other animals in the whole of the hotel.
 			</p>
 			<p>
-				If dogs are allowed, they may be disallowed in specific room types.
+				If dogs are allowed in the hotel, they may be disallowed in specific room types.
 			</p>
 		</div>
 	</div>
@@ -112,6 +112,16 @@
 			</p>
 		</div>
 	</div>
+
+	<div data-info-for="info-groups">
+		<span>Room Type Groups</span>
+		<div>
+			<p>
+				Set this if room types are presented by their group code, where room types that are slightly different.
+			</p>
+		</div>
+	</div>
+
 	<div data-info-for="info-admin-notes">
 		<span>Admin Notes</span>
 		<div>
