--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_HotelEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_HotelEdit.cshtml
@@ -42,6 +42,12 @@
 						<label asp-for="Enabled" class="form-check-label"></label>&nbsp;
 						<info-icon name="info-enabled" />
 					</div>
+					
+					<div class="form-check form-switch mb-3">
+						<input asp-for="RoomTypeGroups" type="checkbox" class="form-check-input " />
+						<label asp-for="RoomTypeGroups" class="form-check-label"></label>&nbsp;
+						<info-icon name="info-groups" />
+					</div>
 
 					<div class="form-group mb-3">
 						<label asp-for="Name" class="control-label">Name <info-icon name="info-name" /></label>
@@ -135,4 +141,3 @@
 	</div>
 </div>
 
-@await Html.PartialAsync("Hotels/_HotelEditInfo", "Hotel Edit")
