--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelEdit.cshtml
@@ -18,6 +18,14 @@
 	await Html.RenderPartialAsync("Hotels/_HotelEdit", @Model);
 }
 
+
+@section InfoItems
+{
+	@await Html.PartialAsync("Hotels/_HotelEditInfo", "Hotel Edit")
+}
+
+
+
 @section Scripts {
 	<script src="~/js/mshapp/msh-apiservice.js"></script>
 	<script src="~/js/mshapp/mshapp.js"></script>
