--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelsList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelsList.cshtml
@@ -37,6 +37,8 @@
 
 @await Html.PartialAsync("Admin/_AdminErrorBlock", "")
 
+<input type="hidden" id="edit-type" value="hotel-list" />
+
 @section InfoItems {
 
 	<div data-info-for="info-hotels">
