--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/RatePlanTextEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/RatePlanTextEdit.cshtml
@@ -22,7 +22,7 @@
 
 @section InfoItems
 {
-	@await Html.PartialAsync("Hotels/_RatePlanEditInfo", "Rate Plan Add")
+	@await Html.PartialAsync("Hotels/_RatePlanTextEditInfo", "Rate Plan Text Edit")
 }
 
 @section Scripts {
