--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Loggers/LogXmlConfigEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Loggers/LogXmlConfigEdit.cshtml
@@ -121,7 +121,11 @@
 		<span>Redact</span>
 		<div>
 			<p>
-
+				When logs are saved, redact personal information.
+			</p>
+			<p>
+				This should be on. However, there are times it's necessary to debug personal details, and so this can be turned off.
+				Once debugging is complete you can manually redact or delete logs.
 			</p>
 		</div>
 	</div>
