--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_ExtraEditInfo.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_ExtraEditInfo.cshtml
@@ -1,17 +1,34 @@
 ﻿@* Info blocks for _HotelEdit.cshtml *@
 
 
-@section InfoItems {
-
-	<div data-info-for="info-code">
-		<span>Extra Code</span>
-		<div>
-			<p>
-				A unique code within the hotel. It must match the Opera Package code.
-			</p>
-		</div>
+<div data-info-for="info-code">
+	<span>Extra Code</span>
+	<div>
+		<p>
+			A unique code within the hotel. It must match the Opera Package code.
+		</p>
 	</div>
-	<div data-info-for="info-price">
+</div>
+
+<div data-info-for="info-enabled">
+	<span>Extra Enabled</span>
+	<div>
+		<p>
+			An Extra must be enabled to be used.
+		</p>
+	</div>
+</div>
+
+<div data-info-for="info-enabled-all">
+	<span>Extra Enabled All</span>
+	<div>
+		<p>
+			
+		</p>
+	</div>
+</div>
+
+<div data-info-for="info-price">
 		<span>Extra Price</span>
 		<div>
 			<p>
@@ -67,4 +84,3 @@
 			</p>
 		</div>
 	</div>
-}
