--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_HotelEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_HotelEdit.cshtml
@@ -45,7 +45,7 @@
 					
 					<div class="form-check form-switch mb-3">
 						<input asp-for="RoomTypeGroups" type="checkbox" class="form-check-input " />
-						<label asp-for="RoomTypeGroups" class="form-check-label"></label>&nbsp;
+						<label asp-for="RoomTypeGroups" class="form-check-label">Room Type Groups</label>&nbsp;
 						<info-icon name="info-groups" />
 					</div>
 
@@ -107,13 +107,13 @@
 					</div>
 
 					<div class="form-group mb-3">
-						<label asp-for="CrsNumberInt" class="control-label">CRS Number International<info-icon name="info-crs-number-int" /></label>
+						<label asp-for="CrsNumberInt" class="control-label">CRS Number International <info-icon name="info-crs-number-int" /></label>
 						<input asp-for="CrsNumberInt" class="form-control" />
 						<span asp-validation-for="CrsNumberInt" class="text-danger"></span>
 					</div>
 
 					<div class="form-group mb-3">
-						<label asp-for="DisabledText" class="control-label">Disabled Text<info-icon name="info-disabled-text" /></label>
+						<label asp-for="DisabledText" class="control-label">Disabled Text <info-icon name="info-disabled-text" /></label>
 						<input asp-for="DisabledText" class="form-control" />
 						<span asp-validation-for="DisabledText" class="text-danger"></span>
 					</div>
