--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_RoomTypeEditInfo.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_RoomTypeEditInfo.cshtml
@@ -47,6 +47,9 @@
 			<p>
 				A code used to group similar rooms. It applies only if room type groups are enabled.
 			</p>
+			<p>
+				The Group Code is part of this booking system and not part of Opera.
+			</p>
 		</div>
 	</div>
 	<div data-info-for="info-occupation">
