--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_SpecialEditInfo.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_SpecialEditInfo.cshtml
@@ -1,39 +1,53 @@
 ﻿@* Info blocks for _SpecialEdit.cshtml *@
 
 
-@section InfoItems {
+
 
 	<div data-info-for="info-code">
 		<span>Special Code</span>
 		<div>
 			<p>
-
+				Special Requests must be assigned a unique code.
 			</p>
-
-		</div>
-	</div>
-
-	<div data-info-for="info-code">
-		<span>Special Code</span>
-		<div>
 			<p>
-
+				Specials are part of this booking system and not Opera. They are posted to Opera as comments.
 			</p>
 		</div>
 	</div>
-	<div data-info-for="info-enabled">
-		<span>Enabled</span>
-		<div>
-			<p>
 
-			</p>
-		</div>
+	
+<div data-info-for="info-enabled">
+	<span>Enabled</span>
+	<div>
+		<p>
+			The Special must be enabled to be used.
+		</p>
 	</div>
-	<div data-info-for="info-text">
+</div>
+
+<div data-info-for="info-adults-only">
+	<span>Enabled</span>
+	<div>
+		<p>
+			The Special is available only for adults.
+		</p>
+	</div>
+</div>
+
+<div data-info-for="info-item-type">
+	<span>Enabled</span>
+	<div>
+		<p>
+			Select the type of Special.
+		</p>
+	</div>
+</div>
+
+<div data-info-for="info-text">
 		<span>Text</span>
 		<div>
 			<p>
-
+				The text presented to the user that describes the Special.
 			</p>
 		</div>
 	</div>
@@ -57,7 +71,7 @@
 		<span>Is Valued</span>
 		<div>
 			<p>
-
+				True if the Special has a value.
 			</p>
 		</div>
 	</div>
@@ -86,4 +100,4 @@
 		</div>
 	</div>
 
-}
+
