--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/ExtraAdd.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/ExtraAdd.cshtml
@@ -22,6 +22,13 @@
 
 @await Html.PartialAsync("Hotels/_ExtraEdit", @Model)
 
+@section InfoItems {
+
+	@await Html.PartialAsync("Hotels/_ExtraEditInfo", "Extra Edit")
+
+}
+
+
 @section Scripts {
 	<script src="~/js/mshapp/msh-apiservice.js"></script>
 	<script src="~/js/mshapp/mshapp.js"></script>
