--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_RatePlanEditInfo.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_RatePlanEditInfo.cshtml
@@ -19,24 +19,36 @@
 		</div>
 	</div>
 
-	<div data-info-for="info-rate-plan-code">
-		<span>Rate Plan Code</span>
-		<div>
-			<p>
-				This must be the same as the rate plan code in Opera, otherwise the system will ignore it.
-				And, any rate plan code in Opera that is to be sold through this system must have a record in the rate plans here.
-			</p>
-			<p>
-				Most data types with a code require a unique code. With Rate Plans there's the potential to have multiple plans with the same code,
-				where, for example, the same code is available at different parts of the year. 
-				So the rate plan code is combined with the <b>Stay From</b> date to form a unique code, the <b>Code</b> in the table. 
-				This is why the Stay dates cannot be edited directly in the edit from once hey have been set during an add operation.
-			</p>
-			<p>
-				This is why the date move feature is provided in the rate plan list.
-			</p>
-		</div>
+<div data-info-for="info-rate-plan-code">
+	<span>Rate Plan Code</span>
+	<div>
+		<p>
+			This must be the same as the rate plan code in Opera, otherwise the system will ignore it.
+			And, any rate plan code in Opera that is to be sold through this system must have a record in the rate plans here.
+		</p>
+		<p>
+			Most data types with a code require a unique code. With Rate Plans there's the potential to have multiple plans with the same code,
+			where, for example, the same code is available at different parts of the year. 
+			So the rate plan code is combined with the <b>Stay From</b> date to form a unique code, the <b>Code</b> in the table. 
+			This is why the Stay dates cannot be edited directly in the edit from once hey have been set during an add operation.
+		</p>
+		<p>
+			This is why the date move feature is provided in the rate plan list.
+		</p>
 	</div>
+</div>
+<div data-info-for="info-enabled">
+	<span>Enabled</span>
+	<div>
+		<p>
+			The Rate Plan must be enabled to be used.
+		</p>
+		<p>
+			The Rate Plan Code must also exist in Opera, and must be enabled for the web booking channel.
+		</p>
+	</div>
+</div>
+
 	<div data-info-for="info-confirmation-text">
 		<span>Confirmation Text</span>
 		<div>
@@ -57,7 +69,7 @@
 		<span>Group</span>
 		<div>
 			<p>
-
+				This is only an organisational group code within this application. Nothing depends on it when making bookings.
 			</p>
 		</div>
 	</div>
@@ -121,7 +133,10 @@
 		<span>Is Base Rate</span>
 		<div>
 			<p>
-
+				A Rate Plan that is a base rate can be used as the base for other rates.
+			</p>
+			<p>
+				Typically, this will be a higher value rate plan, and those that rely on it will be discounted with respect to this rate plan.
 			</p>
 		</div>
 	</div>
@@ -129,7 +144,7 @@
 		<span>Is Offer</span>
 		<div>
 			<p>
-
+				This is a standard rate plan, and may be used for 
 			</p>
 		</div>
 	</div>
