--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_RatePlanSortTable.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_RatePlanSortTable.cshtml
@@ -1,5 +1,4 @@
-﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
-@using Msh.WebApp.Models.Admin.ViewModels
+﻿@using Msh.WebApp.Models.Admin.ViewModels
 @model Msh.WebApp.Models.Admin.ViewModels.RatePlanSortListVm
 @{
 	var rowIndex = 0;
@@ -13,11 +12,6 @@
 				<div class="cell-inner">
 					<p>Code</p>
 				</div>
-				<div class="cell-inner">
-					<a href="javascript:window.mshMethods.sortList('@Model.HotelCode')">
-						<i class="fa-solid fa-arrow-up"></i>
-					</a>
-				</div>
 			</div>
 		</th>
 		<th>Order</th>
@@ -26,26 +20,16 @@
 		<th>   
 			<div class="cell-outer">
 				<div class="cell-inner">
-					<a asp-controller="Hotels" asp-action="RatePlanAdd" asp-route-hotelCode="@Model.HotelCode">
+					@* <a asp-controller="Hotels" asp-action="RatePlanAdd" asp-route-hotelCode="@Model.HotelCode">
 						<i class="fa-solid fa-plus"></i>
-					</a>
+					</a> *@
+					@* <a href="javascript:mshMethods.addRatePlanSort('@Model.HotelCode')">
+						<i class="fa-solid fa-plus"></i>
+					</a> *@
 				</div>
 			</div>
 		</th>
-		<th>
-			<div class="cell-outer">
-				<div class="cell-inner">
-					Copy
-				</div>
-			</div>
-		</th>
-		<th>
-			<div class="cell-outer">
-				<div class="cell-inner">
-					<input type="checkbox" name="bulk-check" id="blk" data-msh-code="0" />
-				</div>
-			</div>
-		</th>
+		
 	</tr>
 			
 	@foreach (var rt in @Model.RatePlanSorts)
@@ -63,14 +47,19 @@
 				{
 					HotelCode = Model.HotelCode,
 					Code = rt.Code,
-					Index = rowIndex,
+					Index = rowIndex++,
 					Count = count,
-					EditAction = "RatePlanEdit"
+					EditAction = "RatePlanEdit",
+					IncludeCheckbox = false,
+					IncludeCopy = false,
+					IncludeEdit = false
 				};
 			}
 			@await Html.PartialAsync("Hotels/_TableCommonCells", vm)
+			<td>
+				@rt.Text
+			</td>
 		</tr>
 
-		rowIndex++;
 	}
 </table>
