Update script tests to include overlays

--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Dev/ScriptsTest.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Dev/ScriptsTest.cshtml
@@ -12,7 +12,9 @@
 	<div>
 		<input type="button" id="show-modal" class="btn btn-primary" value="Show Modal" />
 	</div>
-
+	<div class="mt-3">
+		<input type="button" id="show-overlayl" class="btn btn-primary" value="Show Overlay" />
+	</div>
 </div>
 
 @section Scripts{
