Update hotels list ops

--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_HotelEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_HotelEdit.cshtml
@@ -130,7 +130,7 @@
 			
 			@await Html.PartialAsync("_SaveReturnButtons", new SaveReturnButtonsVm
 			{
-				ReturnUrl = "/Admin/Hotels/",
+				ReturnUrl = "/Admin/Hotels/HotelsList",
 				ReturnText = ConstReturnText.ReturnToList,
 				ButtonType = SaveReturnTypes.EventListener,
 				SaveOperation = "submit"
